--- a/.github/workflow/markdown-autodocs.yml
+++ b/.github/workflow/markdown-autodocs.yml
@@ -10,4 +10,11 @@ jobs:
     steps:
       - name: autodocs
         uses: dineshsonachalam/markdown-autodocs@v1.0.4
+        with:
+          commit_author: Jimmy Briggs <jimmy.briggs@jimbrig.com>
+          commit_user_email: jimmy.briggs@jimbrig.com
+          commit_message: Apply automatic changes
+          branch: main
+          output_file_paths: '[./README.md]'
+          categories: '[code-block]'
         # https://github.com/marketplace/actions/markdown-autodocs
