--- a/.github/workflow/markdown-autodocs.yml
+++ b/.github/workflow/markdown-autodocs.yml
@@ -3,11 +3,13 @@ on:
   push:
     branches:
       - main
-
+  workflow_dispatch:
 jobs:
   autoupdate-readme:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: autodocs
         uses: dineshsonachalam/markdown-autodocs@v1.0.4
         with:
