--- a/.github/workflows/markdown-autodocs.yml
+++ b/.github/workflows/markdown-autodocs.yml
@@ -1,4 +1,4 @@
-name: testworkflow
+name: autodocs
 on:
   push:
     branches:
@@ -13,8 +13,8 @@ jobs:
       - name: autodocs
         uses: dineshsonachalam/markdown-autodocs@v1.0.4
         with:
-          commit_author: Jimmy Briggs <jimmy.briggs@jimbrig.com>
-          commit_user_email: jimmy.briggs@jimbrig.com
+          commit_author: Ellie The Yeen <42704150+EllieTheYeen@users.noreply.github.com>
+          commit_user_email: 42704150+EllieTheYeen@users.noreply.github.com
           commit_message: Apply automatic changes
           branch: main
           output_file_paths: '[./README.md]'
