--- a/.github/workflows/mastodonactiontest.yml
+++ b/.github/workflows/mastodonactiontest.yml
@@ -5,7 +5,7 @@ on:
       - main
   #workflow_dispatch:
 jobs:
-  autoupdate-readme:
+  mastodonactiontest:
     runs-on: ubuntu-latest
     name: mastodonactiontest
     environment: myenv
