--- a/.github/workflows/mastodonactiontest.yml
+++ b/.github/workflows/mastodonactiontest.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/checkout@v3
       - name: mastodonactiontest
         uses: EllieTheYeen/MastodonActionTest@v1
+        env:
+          MASTODON_TOKEN: ${{ secrets.MASTODON_TOKEN }}
         with:
           name: Mastodon Action Test
           email: 42704150+EllieTheYeen@users.noreply.github.com
