Last part of rename thingy

--- a/.github/workflows/mastodonactiontest.yml
+++ b/.github/workflows/mastodonactiontest.yml
@@ -24,4 +24,4 @@ jobs:
           email: 42704150+EllieTheYeen@users.noreply.github.com
           branch: main
           instance: https://botsin.space
-          blogbase: https://ellietheyeen.github.io/Test
+          blogbase: https://ellietheyeen.github.io/test
