--- a/.github/workflows/mastodonactiontest.yml
+++ b/.github/workflows/mastodonactiontest.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: mastodonactiontest
-        run: python3 action.py -name '${{ env.name }}' -email '${{ env.email }}' -branch '${{ env.branch }}' -instance '${{ env.instance }}' -blogbase '${{ env.blogbase }}' -gist '${{ env.gist }}'
+        run: python3 action.py -name '${{ env.name }}' -email '${{ env.email }}' -branch '${{ env.branch }}' -instance '${{ env.instance }}' -blogbase '${{ env.blogbase }}' -gist '${{ env.gist }}' -username '${{ env.username }}'
         shell: bash
         env:
           MASTODON_TOKEN: ${{ secrets.MASTODON_TOKEN }}
@@ -26,5 +26,6 @@ jobs:
           name: Mastodon Action Test
           email: 42704150+EllieTheYeen@users.noreply.github.com
           branch: main
+          username: EllieTheYeen
           instance: https://botsin.space
           blogbase: https://ellietheyeen.github.io/test
